-Change: Don't write icedax info file
-Change: Set so-version for libsoundkonvertercore
-Fix: Don't require an output path when using a user defined profile as command line argument
-Fix: Don't crash when tags can't be read
-Fix: Error message when trying to write to a directory without permissions
-Fix: Store album artist information to file list files
-Fix: Some crashes

2.1.90 (2.2.0 rc1):
-Add: Detect (DRM)-encrypted wma and m4a files
-Add: Adjust gain for mp3 files
-Add: Option to copy files instead of re-encoding them if input and output codec are the same
-Change: Fall-back from album artist to artist in "meta data" naming mode if album artist is empty

2.1.2:
-Fix: False error detection in the Replay Gain tool
-Fix: Properly re-paint conversion file list on status change

2.1.1:
-Add: Check for MP4 support in faac
-Fix: Don't run vorbisgain more than once per directory
-Fix: Progress bar jumps when a file finished

2.1.0:
-Add: Update translations

2.0.91 (2.1.0 rc2):
-Add: Full GUI support for album artist tags including the CD ripper
-Add: Chinese translation
-Change: Replace uses of fixed pixel metrics with sizes based on the default font size
-Fix: CD ripper layout

2.0.90 (2.1.0 rc1):
-Add: Hide main window when started with --replaygain argument
-Add: Option to eject CD after ripping has been completed (enabled by default)
-Add: New space holder for the "meta data" naming mode that contains the source directory
-Add: Configuration options for cdparanoia
-Add: icedax ripper plugin
-Add: Copy album artist tags
-Change: Remember last folder for add files/directory/playlist dialogs
-Change: Add symlinked files to file list

2.0.5:
-Add: Catalan translation
-Add: Swedish translation
-Add: Chinese (Taiwan) translation
-Add: Romanian translation
-Fix: Don't mix up total tracks and total discs when reading vorbis comments

2.0.4:
-Add: Slovenian translation

2.0.3:
-Fix: Update normalize filter widget properly
-Fix: Show more than one filter widget at a time